--- a/css/custom.css
+++ b/css/custom.css
@@ -3,36 +3,36 @@
 }
 
 a {
-    color: #b66363;
+    color: #c34d0f;
     text-decoration: none;
 }
 
 .btn-primary {
     color: #fff;
-    background-color: #b66363;
-    border-color: #b66363;
+    background-color: #c34d0f;
+    border-color: #c34d0f;
 }
 
 .btn-primary:hover {
-    color: #b66363;
+    color: #c34d0f;
     background-color: #fff;
-    border-color: #b66363;
+    border-color: #c34d0f;
 }
 
 .nav>li>a:focus, .nav>li>a:hover {
   color: #ffffff;
     text-decoration: none;
-    background-color: #b66363;
+    background-color: #c34d0f;
 }
 
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
-    background-color: #b66363;
-    border-color: #b66363;
+    background-color: #c34d0f;
+    border-color: #c34d0f;
     color: #ffffff;
-
 }
+
 .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
     color: #ffffff;
     text-decoration: bold;
-    background-color: #b66363;
+    background-color: #c34d0f;
 }
