--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,13 +3,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
     <!-- Main JS (navbar.js, katex_init.js and masonry_init.js)-->
-    <script defer=true src="{{ site.baseurl }}/assets/js/main.min.js"></script>
+    <script defer=true src="/{{ site.baseurl }}/assets/js/main.min.js"></script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="/{{ site.baseurl }}/assets/css/main.css">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/{{ site.theme_settings.favicon }}" type="image/x-icon">
+    <link rel="shortcut icon" href="/{{ site.baseurl }}/{{ site.theme_settings.favicon }}" type="image/x-icon">
 
     <!-- Canonical -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -19,11 +19,11 @@
 
     <!-- Font Awesome -->
     <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/vendor/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/{{ site.baseurl }}/assets/css/vendor/font-awesome.min.css">
     
     {% if page.bootstrap %}
     <!-- Bootstrap-3.3.7 isolation CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/vendor/bootstrap-iso.min.css">
+    <link rel="stylesheet" type="text/css" href="/{{ site.baseurl }}/assets/css/vendor/bootstrap-iso.min.css">
 
     <!-- JQuery 2.2.4 -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -39,8 +39,8 @@
 
     <!-- KaTeX 0.8.3 -->
     {% if site.theme_settings.katex %}
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/vendor/katex.min.css">
-    <script src="{{ site.baseurl }}/assets/js/vendor/katex.min.js">
+    <link rel="stylesheet" type="text/css" href="/{{ site.baseurl }}/assets/css/vendor/katex.min.css">
+    <script src="/{{ site.baseurl }}/assets/js/vendor/katex.min.js">
     </script>
     {% endif %}
 
