--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -79,7 +79,7 @@ layout: page
             {% for note in site.portfolio %} 
                 {% if note.tags contains tag %}
                 <h5 class="tag-title">
-                    <a href="{{ site.baseurl }}{{ note.url }}">
+                    <a href="/{{ site.baseurl }}{{ note.url }}">
                         <i class="fa fa-file-o" aria-hidden="true"></i>
                         {{ note.title }}
                     </a>
