--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -20,5 +20,5 @@ html { overflow-y: scroll; }
 </div> 
 
 <!-- Require JQuery >= 3.2.1 Requireas well -->
-<script src="/{{ site.baseurl }}/assets/js/vendor/masonry.pkgd.min.js" type="text/javascript"></script>
-<script src="/{{ site.baseurl }}/assets/js/vendor/imagesloaded.min.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/js/vendor/masonry.pkgd.min.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/js/vendor/imagesloaded.min.js" type="text/javascript"></script>
