--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
   {% if site.theme_settings.header_text %}
   <div id="main" class="call-out"
-  style="background-image: url('/{{ site.baseurl }}/{{ site.theme_settings.header_text_feature_image }}')">
+  style="background-image: url('{{ site.baseurl }}/{{ site.theme_settings.header_text_feature_image }}')">
     {{ site.theme_settings.header_text }}
   </div>
   {% endif %}
@@ -14,7 +14,7 @@ layout: default
     <div class="post-teaser">
       {% if post.thumbnail %} 
       <!--<div class="post-img">
-         <img src="/{{ site.baseurl }}/{{ post.thumbnail }}">
+         <img src="{{ site.baseurl }}/{{ post.thumbnail }}">
       </div>-->
       {% endif %}
       <span>
