--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -40,11 +40,7 @@
 	<!-- Navigation from old site --> 
           <li>
             <a href="mentors.html">Projects and Mentors</a>
-          </li>
-          
-          <li>
-            <a href="coc.html">Code of Conduct</a>
-          </li>
+          </li>             
           <li>
             <a href="team.html">Team</a>
           </li>
@@ -52,8 +48,8 @@
           <li>
             <a href="http://sciencehackday.org/">Global SHD</a>
           </li>
-           <li><a href="2016/index.html">SHD 2016</a></li>
-	   <li><a href="2016/index.html">SHD 2017</a></li>
+           <li><a href="{{ site.baseurl }}/2016/index.html" target="_blank" >SHD 2016</a></li>
+	   <li><a href="{{ site.baseurl }}/2017/index.html" target="_blank" >SHD 2017</a></li>
         
         <!-- Auto Generation of SPECIAL pages in the navbar -->
        <!-- from original theme  {% for item in site.theme_settings.special_page %}
