--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -42,9 +42,9 @@
       	</li>
       	<li><a href="schedule.html">SHD Schedule</a></li>
 	<div class="dropdown">
-  			<a href="http://sciencehackday.org/"target="_blank"> Global SHD</a>
-   			<a href="{{ site.baseurl }}/2016/index.html" target="_blank" >SHD 2016</a>
-    			<a href="{{ site.baseurl }}/2017/index.html" target="_blank" >SHD 2017</a>
+		<li><a href="http://sciencehackday.org/"target="_blank"> Global SHD</a></li>
+   			<li><a href="{{ site.baseurl }}/2016/index.html" target="_blank" >SHD 2016</a></li>
+    			<li><a href="{{ site.baseurl }}/2017/index.html" target="_blank" >SHD 2017</a></li>
   		</div>
 	</div> 
 	        
