--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -56,12 +56,12 @@
         {% assign name_page = page.title | append: name_page %}
         {% endif %}
         {% endfor %}    
-		<div class="dropdown"> <span>Archive</span>
+		<li><div class="dropdown"> <span>Archive</span>
   			<div class="dropdown-content">
     			<a href="{{ site.baseurl }}/2016/index.html" target="_blank" >SHD 2016</a>
     			<a href="{{ site.baseurl }}/2017/index.html" target="_blank" >SHD 2017</a>
 			</div>
-		</div>
+			</div></li>
 	<li> <a href="http://sciencehackday.org/"target="_blank"> Globalvv SHD</a></li>
      </ul>
      </nav>
