--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -62,7 +62,7 @@
     			<a href="{{ site.baseurl }}/2017/index.html" target="_blank" >SHD 2017</a>
 			</div>
 			</div></li>
-	<li> <a href="http://sciencehackday.org/"target="_blank"> Globalvv SHD</a></li>
+	<li> <a href="http://sciencehackday.org/"target="_blank"> Global SHD</a></li>
      </ul>
      </nav>
 </header>
