--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -23,7 +23,7 @@ h1.title {
     }
 }
 
-/* Add some shadows to create a card effect */
+/* Add some shadows to create a card effect 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
