--- a/index.njk
+++ b/index.njk
@@ -4,106 +4,123 @@ layout: base.njk
 
 <div class="hero-section">
   <h1 class="hero-title">Science Hack Day India 2022</h1>
-  <p class="">
+  <p class="hero-info">
     December 23rd - 25th<br/>
     Belgaum, India
   </p>
   <a class="primary-btn" href="">Buy Tickets</a>
 </div>
-<section class="about-section">
+<section class="about-section section-dark">
   <h2 class="section-title">What is Science Hack Day?</h2>
-  <p>
-    Science Hack Day is a three-day event where anyone excited about making weird,
-    silly or serious things with science comes together in the same physical space
-    to see what they can prototype within 36 consecutive hours. Designers, developers,
-    artists, scientists and people from any background are welcome to attend – no
-    experience in science or hacking is necessary, just an insatiable curiosity.
-    The event is organized by volunteers, and supported via sponsors. SHD India
-    2022 will be our 5th annual event!
-  </p>
-  <p>
-    The mission of Science Hack Day is simply to get excited and make things with
-    science! People organically form multidisciplinary teams over the course of a
-    weekend: particle physicists team up with designers, marketers join forces with
-    open source rocket scientists, writers collaborate with molecular biologists,
-    and developers partner with school kids. By collaborating on focused tasks
-    during this short period, small groups of hackers are capable of producing remarkable
-    results. To date, there have been over 60 Science Hack Day events across 22 countries
-    around the globe and more are being planned which are listed on the Global SHD site.
-  </p>
-  <p>
-    Here's a video from SHD India 2019 that shows what the event is like:
-  </p>
-  <iframe width="560" height="315" 
-    src="https://www.youtube-nocookie.com/embed/fDTUpymmqVg"
-    title="Video showing glimpses from Science Hack Day India 2022" frameborder="0" allowfullscreen></iframe>
+  <div class="flex-container">
+    <div class="text-container">
+      <p>
+        Science Hack Day is a three-day event where anyone excited about making weird,
+        silly or serious things with science comes together in the same physical space
+        to see what they can prototype within 36 consecutive hours. Designers, developers,
+        artists, scientists and people from any background are welcome to attend – no
+        experience in science or hacking is necessary, just an insatiable curiosity.
+        The event is organized by volunteers, and supported via sponsors. SHD India
+        2022 will be our 5th annual event!
+      </p>
+      <p>
+        The mission of Science Hack Day is simply to get excited and make things with
+        science! People organically form multidisciplinary teams over the course of a
+        weekend: particle physicists team up with designers, marketers join forces with
+        open source rocket scientists, writers collaborate with molecular biologists,
+        and developers partner with school kids. By collaborating on focused tasks
+        during this short period, small groups of hackers are capable of producing remarkable
+        results. To date, there have been over 60 Science Hack Day events across 22 countries
+        around the globe and more are being planned which are listed on the Global SHD site.
+      </p>
+    </div>
+    <iframe width="560" height="315" 
+      src="https://www.youtube-nocookie.com/embed/fDTUpymmqVg"
+      title="Video showing glimpses from Science Hack Day India 2022" frameborder="0" allowfullscreen></iframe>
+  </div>
 </section>
 <section class="info-section">
   <h2 class="section-title">What happens at Science Hack Day?</h2>
-  <h3>who can participate?</h3>
-  <p>
-    SHD-India is NOT just another Hackathon. It is an unconference style event
-    that provides immersive experential learning environment for knowledge sharing
-    for all age groups - 5 to 105 years :)
-    <br/>
-    It is fully packed with Hands-on Workshops, Lightning Talks, Science Demos,
-    Hacking Activities, Art and Architectural Installations, Science Show, Fun Games,
-    Stargazing, Camp Fire and many more...In short SHD India is a fusion of Science,
-    Technology, Engineering, Maths, Arts, Architecture, Design with passion, curiosity
-    and creative collaboration.
-  </p>
-  <h3>when is it going to happen?</h3>
-  <ul>
-    <li>Day-0 : 23 December 2022 (Only for SHD Hackers and Resident Hackers)</li>
-    <li>Day-1 and Day-2 : 24th and 25th December 2022</li>
-  </ul>
-  <h3>where is it happening?</h3>
-  <p>
-    <a href="http://sankalphospitality.in/">Sankalp Bhoomi Farm Resort</a>, Belgaum, Karnataka State, India
-    (<a href="https://goo.gl/maps/qmzPcrah6ZR53syj8">Google map link</a>)
-    <br/>
-    Sankalpbhoomi -The farm resort, totally in tune with nature in its rustic
-    uncorrupted state, stands testimony to saving nature. It was once an abandoned
-    quarry, today natures glory restored. The resort resembles an enchanting oasis,
-    with a thick set of trees, sprawling lawns, and a large lagoon surrounded by
-    picturesque expansive rock walls as backdrop. The venue provides perfect space
-    and ambience for all hacking/making activities. It also offers a complete
-    rejuvenating and relaxing experience for all SHD participants to return with
-    everlasting memories.
-  </p>
-  <h3>How to reach?</h3>
-  <h4>By road</h4>
-  <p>
-    Belagavi / Belgaum is directly accessible via National Highway 4. Belgaum is
-    located 500 Kms from Mumbai, 500 Kms from Bangalore, 300 Kms from Pune and
-    550 Kms to Hyderabad. There are over night buses available from any of these
-    cities and are very comfortable to travel in. You can also take this opportunity
-    to have a road trip since the path to Belgaum from anywhere has cities along the
-    way. Goa is about 130 Kms away from Belgaum and takes 2-3 hours by road.
-  </p>
-  <h4>By train</h4>
-  <p>
-    Belgaum Railway station has the code BGM. There are over night trains from Bangalore and Mumbai.
-  </p>
-  <h4>By air</h4>
-  <p>
-    The airport serving the city of Belgaum is at Sambra, located 10 km from the city on the SH20.
-    Belagavi/Belgaum Airport (IXG) has regular flights connecting Bengaluru, Mumbai, Pune, Hyderabad
-    and Ahmedabad. Air tavel to Belgaum has become affordable thanks to the inclusion of IXG in UDAN-3 scheme.
-  </p>
-  <h3>How to register?</h3>
-  <p>
-    There are different tickets for workshops and hacker participants. We provide accomodation at the venue
-    for outstation participants. Tickets will be released soon.
-  </p>
+  <h3 class="section-subtitle">who can participate?</h3>
+  <div class="text-container">
+    <p>
+      SHD-India is NOT just another Hackathon. It is an unconference style event
+      that provides immersive experential learning environment for knowledge sharing
+      for all age groups - 5 to 105 years :)
+      <br/><br/>
+      It is fully packed with Hands-on Workshops, Lightning Talks, Science Demos,
+      Hacking Activities, Art and Architectural Installations, Science Show, Fun Games,
+      Stargazing, Camp Fire and many more...In short SHD India is a fusion of Science,
+      Technology, Engineering, Maths, Arts, Architecture, Design with passion, curiosity
+      and creative collaboration.
+    </p>
+  </div>
+  <div class="flex-container">
+    <div>
+      <h3 class="section-subtitle">when is it going to happen?</h3>
+      <div class="text-container">
+        <ul>
+          <li>Day-0 : 23 December 2022 (Only for SHD Hackers and Resident Hackers)</li>
+          <li>Day-1 and Day-2 : 24th and 25th December 2022</li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <h3 class="section-subtitle">where is it happening?</h3>
+      <div class="text-container">
+        <p>
+          <a href="http://sankalphospitality.in/">Sankalp Bhoomi Farm Resort</a>, Belgaum, Karnataka State, India
+          (<a href="https://goo.gl/maps/qmzPcrah6ZR53syj8">Google map link</a>)
+          <br/>
+          Sankalpbhoomi -The farm resort, totally in tune with nature in its rustic
+          uncorrupted state, stands testimony to saving nature. It was once an abandoned
+          quarry, today natures glory restored. The resort resembles an enchanting oasis,
+          with a thick set of trees, sprawling lawns, and a large lagoon surrounded by
+          picturesque expansive rock walls as backdrop. The venue provides perfect space
+          and ambience for all hacking/making activities. It also offers a complete
+          rejuvenating and relaxing experience for all SHD participants to return with
+          everlasting memories.
+        </p>
+      </div>
+    </div>
+  </div>
+  <h3 class="section-subtitle">How to reach?</h3>
+  <div class="text-container">
+    <h4>By road</h4>
+    <p>
+      Belagavi / Belgaum is directly accessible via National Highway 4. Belgaum is
+      located 500 Kms from Mumbai, 500 Kms from Bangalore, 300 Kms from Pune and
+      550 Kms to Hyderabad. There are over night buses available from any of these
+      cities and are very comfortable to travel in. You can also take this opportunity
+      to have a road trip since the path to Belgaum from anywhere has cities along the
+      way. Goa is about 130 Kms away from Belgaum and takes 2-3 hours by road.
+    </p>
+    <h4>By train</h4>
+    <p>
+      Belgaum Railway station has the code BGM. There are over night trains from Bangalore and Mumbai.
+    </p>
+    <h4>By air</h4>
+    <p>
+      The airport serving the city of Belgaum is at Sambra, located 10 km from the city on the SH20.
+      Belagavi/Belgaum Airport (IXG) has regular flights connecting Bengaluru, Mumbai, Pune, Hyderabad
+      and Ahmedabad. Air tavel to Belgaum has become affordable thanks to the inclusion of IXG in UDAN-3 scheme.
+    </p>
+  </div>
+  <h3 class="section-subtitle">How to register?</h3>
+  <div class="text-container">
+    <p>
+      There are different tickets for workshops and hacker participants. We provide accomodation at the venue
+      for outstation participants. Tickets will be released soon.
+    </p>
+  </div>
 </section>
-<section class="sponsor-section">
+<section class="sponsor-section section-dark">
   <h2 class="section-title">Sponsors</h2>
-  <h3>Organizing Partners</h3>
+  <h3 class="section-subtitle">Organizing Partners</h3>
   <ul class="sponsor-items">
     <li class="sponsor-item"></li>
   </ul>
-  <h3>Community Partners</h3>
+  <h3 class="section-subtitle">Community Partners</h3>
   <ul class="sponsor-items">
     <li class="sponsor-item"></li>
   </ul>
