--- a/index.njk
+++ b/index.njk
@@ -40,7 +40,7 @@ layout: base.njk
   </div>
 </section>
 <section class="info-section">
-  <h2 class="section-title">What happens at Science Hack Day?</h2>
+  <h2 class="section-title">What happens at Science Hack Day India?</h2>
   <h3 class="section-subtitle">who can participate?</h3>
   <div class="text-container">
     <p>
