Adds svg separator

--- a/index.njk
+++ b/index.njk
@@ -9,6 +9,9 @@ layout: base.njk
     Belgaum, India
   </p>
   <a class="primary-btn" href="">Buy Tickets</a>
+  <svg xmlns:xlink="http://www.w3.org/1999/xlink" width="1440" xmlns="http://www.w3.org/2000/svg" height="114" id="screenshot-ccaedbc0-13ea-11ed-81ec-45b47c0607c3" viewBox="866 820 1440 114" style="-webkit-print-color-adjust: exact;" fill="none" version="1.1">
+    <path class="shape-fill" rx="0" ry="0" d="M1416.8,930.23C1956.8,931.43,2306,841.57,2306,820L2306,934L866,934L866,820C866,841.93,882.32,933.83,1416.8,930.23ZZ" style="fill: rgb(30, 28, 64); fill-opacity: 1;"/>
+  </svg>
 </div>
 <section class="about-section section-dark">
   <h2 class="section-title">What is Science Hack Day?</h2>
