--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,13 +1,22 @@
 <footer class="site-footer">
-  <p>
+  <nav aria-label="Footer" class="site-link">
+    <h2 class="footer-header">Other links</h2>
+    <ul class="nav-footer">
+      {% for item in footernav %}
+        <li><a href="{{ item.url }}">{{ item.name }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
+  <nav aria-label="Social" class="site-link">
+    <h2 class="footer-header">Connect with us</h2>
+    <ul class="nav-footer">
+      {% for item in sociallinks %}
+        <li><a href="{{ item.url }}">{{ item.name }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
+  <p class="footer-tech">
     built with
     <a href="https://www.11ty.dev/" rel="noopener">eleventy</a>
   </p>
-  <nav aria-label="Footer">
-    <ol class="nav-footer">
-      {% for page in collections.footernav %}
-        <li><a href="{{ page.url }}">{{ page.data.title }}</a></li>
-      {% endfor %}
-    </ol>
-  </nav>
 </footer>
