--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,6 +25,18 @@ body {
   font-family: var(--font);
 }
 
+/* Hide focus styles if they're not needed, for example, 
+when an element receives focus via the mouse. */
+:focus:not(:focus-visible) {
+  outline: 0;
+}
+
+/* Show focus styles on keyboard focus. */
+:focus-visible {
+  outline: 3px solid var(--color-green);
+  outline-offset: 3px;
+}
+
 .site-header, .site-footer, .site-content > * {
   padding: 0 var(--spacing)
 }
@@ -83,11 +95,6 @@ body {
   text-decoration: underline;
 }
 
-.nav__link:focus-visible {
-  outline: 2px solid var(--color-light-purple);
-  outline-offset: 3px;
-}
-
 /* Typography */
 h1, h2, h3, h4 {
   font-family: var(--title-font);
@@ -125,6 +132,36 @@ h1, h2, h3, h4 {
   text-decoration: none;
 }
 
+.custom-shape-divider-wave {
+  position: absolute;
+  right: 0;
+  margin-top: 5rem;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+.custom-shape-divider-wave svg {
+  position: relative;
+  display: block;
+  width: 100%;
+  transform: rotateY(180deg);
+  height: 120px;
+}
+.custom-shape-divider-wave1 {
+  position: absolute;
+  right: 0;
+  margin-top: -3rem;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+.custom-shape-divider-wave1 svg {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 120px;
+}
+
 /* Sections */
 section > * + * {
   margin-top: var(--spacing);
@@ -140,7 +177,7 @@ section > * + * {
 
 .hero-section {
   padding-top: 2rem;
-  padding-bottom: 6rem;
+  padding-bottom: calc(5rem + 120px); /* 5rem margin top of svg divide + 120px height of svg */
 }
 
 .hero-section .hero-title {
@@ -148,8 +185,8 @@ section > * + * {
 }
 
 .hero-info {
-  margin: 1.75rem 0 4rem;
-  font-size: clamp(1.35rem, calc(1.15rem + 1.02vw), 1.88rem);
+  margin: 2.5rem 0 5rem;
+  font-size: clamp(1.25rem, calc(1.15rem + 1.02vw), 1.75rem);
 }
 
 .text-container {
@@ -160,6 +197,10 @@ section > * + * {
 
 .text-container > ul, .text-container > ol {
   padding-left: 2rem;
+}
+
+.text-container a {
+  color: var(--color-green)
 }
 
 .text-container > p + p {
@@ -196,7 +237,7 @@ section > * + * {
   padding-bottom: clamp(6.00rem, calc(3.46rem + 12.68vw), 12.50rem);
 }
 .info-section .section-title{
-  max-width: 35rem;
+  max-width: 35.5rem;
 }
 
 @media (min-width: 1024px) {
@@ -215,4 +256,61 @@ section > * + * {
 .sponsor-section {
   padding-top: 3rem;
   padding-bottom: 6rem;
+}
+
+.sponsor-section .section-title {
+  margin-top: 120px; /* 120px is height of svg separator */
+}
+.sponsor-items {
+  display: flex;
+  flex-wrap: wrap;
+}
+.sponsor-item {
+  list-style: none;
+  margin: var(--spacing);
+}
+.sponsor-item a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 18rem;
+  height: 7.5rem;
+  background: var(--color-white);
+  box-shadow: 10px 10px 0 0 var(--color-green);
+}
+.sponsor-item img {
+  max-width: 100%;
+  max-height: 100%;
+  padding: 0.5rem;
+}
+
+.site-footer {
+  max-width: 1440px;
+  margin: auto;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.site-footer a {
+  color: var(--color-green)
+}
+.site-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.footer-header {
+  font-size: 1.25rem;
+  font-family: var(--font);
+}
+.nav-footer {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.footer-tech {
+  border-top: 1px solid gray;
+  text-align: center;
+  padding-top: 1rem;
 }
