--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="icon" href="/assets/images/favicon.ico">
 </head>
 <body>
   {% include "header.njk" %}
