Updates the text for the ticket link button

--- a/index.njk
+++ b/index.njk
@@ -8,7 +8,7 @@ layout: base.njk
     December 23rd - 25th, 2022<br/>
     Sankalp Bhoomi Farm Resort, Belgaum, India
   </p>
-  <a class="primary-btn">Coming Soon</a>
+  <a class="primary-btn">Tickets Coming Soon</a>
   <div class="custom-shape-divider-wave">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" >
       <path  d="M741,116.23C291,117.43,0,27.57,0,6V120H1200V6C1200,27.93,1186.4,119.83,741,116.23Z" class="shape-fill" fill="#1E1C40" fill-opacity="1"></path>
