Renaming buy tickets to Regsiter and adding Register link to top main nav

--- a/index.njk
+++ b/index.njk
@@ -9,7 +9,7 @@ layout: base.njk
     Sankalp Bhoomi Farm Resort, Belgaum, India
   </p>
   <a class="primary-btn" href="https://shdindia.myinstamojo.com/" target="_blank" rel="noopener noreferrer">
-    Buy Tickets
+    Register for SHD 2022
   </a>
   <div class="custom-shape-divider-wave">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" >
