--- a/index.njk
+++ b/index.njk
@@ -117,7 +117,7 @@ layout: base.njk
   <div class="text-container">
     <p>
       There are different tickets for workshops and hacker participants. We provide accomodation at the venue
-      for outstation participants. Tickets will be released soon.
+      for outstation participants. Tickets can be found <a href="https://shdindia.myinstamojo.com/">here</a>.
     </p>
   </div>
 </section>
