--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -6,7 +6,14 @@
     </a>
     <ol class="nav__items">
       {% for item in mainnav %}
-      <li class="nav__item"><a href="{{ item.url }}" class="nav__link" {% if item.url === page.url or (item.url !== '/' and item.url in page.url)  %}aria-current="page"{% endif %}>{{ item.name }}</a></li>
+      <li class="nav__item">
+        <a
+          href="{{ item.url }}"
+          class="nav__link {% if item.type == 'primary' %}primary{% endif %}"
+          {% if item.url === page.url or (item.url !== '/' and item.url in page.url)  %}aria-current="page"{% endif %}>
+          {{ item.name }}
+        </a>
+      </li>
       {% endfor %}
     </ol>
   </nav>
