--- a/index.njk
+++ b/index.njk
@@ -3,18 +3,19 @@ layout: base.njk
 ---
 
 <div class="hero-section">
-  <h1 class="hero-title">Science Hack Day India 2022</h1>
+  <div class="illustration">
+    <img class="illustration-geometry" alt="" src="/assets/images/bg_geometry.png">
+    <img class="illustration-head" alt="" src="/assets/images/bg_head.png">
+  </div>
+  <h1 class="hero-title">Science Hack Day, India</h1>
   <p class="hero-info">
-    December 23rd - 25th, 2022<br/>
-    Sankalp Bhoomi Farm Resort, Belgaum, India
+    October 27th - 29th, 2023<br/>
+    Sankalp Bhoomi Farm Resort, Belgaum
   </p>
-  <a class="primary-btn" href="https://shdindia.myinstamojo.com/" target="_blank" rel="noopener noreferrer">
-    Register for SHD 2022
-  </a>
-  <div class="custom-shape-divider-wave">
-    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" >
-      <path  d="M741,116.23C291,117.43,0,27.57,0,6V120H1200V6C1200,27.93,1186.4,119.83,741,116.23Z" class="shape-fill" fill="#1E1C40" fill-opacity="1"></path>
-    </svg>
+  <div class="hero-cta">
+    <a class="primary-btn" target="_blank" rel="noopener noreferrer">
+      Registration coming soon
+    </a>
   </div>
 </div>
 <section class="about-section section-dark">
@@ -28,25 +29,13 @@ layout: base.njk
         artists, scientists and people from any background are welcome to attend – no
         experience in science or hacking is necessary, just an insatiable curiosity.
         The event is organized by volunteers, and supported via sponsors. SHD India
-        2022 will be our 5th annual event!
-      </p>
-      <p>
-        The mission of Science Hack Day is simply to get excited and make things with
-        science! People organically form multidisciplinary teams over the course of a
-        weekend: particle physicists team up with designers, marketers join forces with
-        open source rocket scientists, writers collaborate with molecular biologists,
-        and developers partner with school kids. By collaborating on focused tasks
-        during this short period, small groups of hackers are capable of producing remarkable
-        results. To date, there have been over 60 Science Hack Day events across 22 countries
-        around the globe and more are being planned which are listed on the Global SHD site.
+        2023 will be our 6th annual event!
       </p>
     </div>
-    <iframe width="560" height="315" 
-      src="https://www.youtube-nocookie.com/embed/fDTUpymmqVg"
-      title="Video showing glimpses from Science Hack Day India 2022" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/lXkqKo1Ko3E" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
-<section class="info-section" id="about">
+<!-- <section class="info-section" id="about">
   <h2 class="section-title">What happens at Science Hack Day India?</h2>
   <h3 class="section-subtitle">who can participate?</h3>
   <div class="text-container">
@@ -152,4 +141,4 @@ layout: base.njk
       {% endif %}
     {% endfor %}
   </ul>
-</section>
+</section> -->
