--- a/index.njk
+++ b/index.njk
@@ -13,8 +13,8 @@ layout: base.njk
     Sankalp Bhoomi Farm Resort, Belgaum
   </p>
   <div class="hero-cta">
-    <a class="primary-btn" target="_blank" rel="noopener noreferrer">
-      Registration coming soon
+    <a class="primary-btn" target="_blank" href="https://konfhub.com/shdindia" rel="noopener noreferrer">
+      Buy Tickets
     </a>
   </div>
 </div>
