--- a/index.njk
+++ b/index.njk
@@ -1,16 +1,16 @@
 ---
 layout: base.njk
+class: star-bg
 ---
 
 <div class="hero-section">
-  <div class="illustration">
-    <img class="illustration-geometry" alt="" src="/assets/images/bg_geometry.png">
-    <img class="illustration-head" alt="" src="/assets/images/bg_head.png">
-  </div>
-  <h1 class="hero-title">Science Hack Day, India</h1>
+  <!-- <div class="illustration">
+    <img class="illustration-moon" alt="" src="/assets/images/moon.jpg">
+  </div> -->
+  <h1 class="hero-title">Science Hack Day India</h1>
   <p class="hero-info">
-    October 27th - 29th, 2023<br/>
-    Sankalp Bhoomi Farm Resort, Belgaum
+    October 27 - 29, 2023<br/>
+    Belgaum, India
   </p>
   <div class="hero-cta">
     <a class="primary-btn" target="_blank" href="https://konfhub.com/shdindia" rel="noopener noreferrer">
@@ -18,7 +18,7 @@ layout: base.njk
     </a>
   </div>
 </div>
-<section class="about-section section-dark">
+<section class="about-section">
   <h2 class="section-title">What is Science Hack Day?</h2>
   <div class="flex-container">
     <div class="text-container">
